tests/expectations/compiler/dynamic_call/bad_identifier_target_fail.out
Error [ETYC0372117]: Expected `field` or `identifier` but type `u32` was found.
    --> compiler-test:11:23
     |
  11 |         return Adder@(target)/sum(x, y);
     |                       ^^^^^^
